# lcs-pc-loader

./: .gitignore  CMakeLists.txt  README.md  android.cpp  config.h  dumper.cpp  egl.h  falsojni_impl.cpp  game.cpp  game.h  glad.c  glad.h  gles2.h  jni_patch.cpp  jni_patch.h  main.cpp  main.h  mojoelf.cpp  mojoelf.h  requirements.txt
FalsoJNI/: CMakeLists.txt  FalsoJNI_ImplBridge.c  FalsoJNI_ImplBridge.h  FalsoJNI_Logger.c
subhook/: CMakeLists.txt
